show table and plot at once

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -89,14 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89625a37",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d00718f7",
    "metadata": {},
    "outputs": [],
@@ -247,36 +239,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Interactive table with AggrescanAI scores { display-mode: \"form\" }\n",
-    "#@markdown Download the results as a CSV file.\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import display\n",
+    "# #@title Interactive table with AggrescanAI scores { display-mode: \"form\" }\n",
+    "# #@markdown Download the results as a CSV file.\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from IPython.display import display\n",
     "\n",
-    "def save_results_as_csv(df, filename= f\"aggrescanai_results_{uniprot_id}.csv\"):\n",
-    "    df.to_csv(filename, index=False)\n",
-    "    files.download(filename)\n",
-    "    print(f\"Results saved to {filename}\")\n",
+    "# def save_results_as_csv(df, filename= f\"aggrescanai_results_{uniprot_id}.csv\"):\n",
+    "#     df.to_csv(filename, index=False)\n",
+    "#     files.download(filename)\n",
+    "#     print(f\"Results saved to {filename}\")\n",
     "\n",
-    "result_df = pd.DataFrame({\n",
-    "    \"uniprot_id\": [uniprot_id]* len(input_sequence),\n",
-    "    \"position\": list(range(1, len(input_sequence) + 1)),\n",
-    "    \"residue\": list(input_sequence),\n",
-    "    \"aggrescanai_score\": df[\"prob_vector\"].values[0]\n",
-    "})\n",
+    "# result_df = pd.DataFrame({\n",
+    "#     \"uniprot_id\": [uniprot_id]* len(input_sequence),\n",
+    "#     \"position\": list(range(1, len(input_sequence) + 1)),\n",
+    "#     \"residue\": list(input_sequence),\n",
+    "#     \"aggrescanai_score\": df[\"prob_vector\"].values[0]\n",
+    "# })\n",
     "\n",
-    "# Interactive table view\n",
-    "fig_table = go.Figure(data=[go.Table(\n",
-    "    header=dict(values=list(result_df.columns), fill_color='paleturquoise', align='left'),\n",
-    "    cells=dict(values=[result_df[col] for col in result_df.columns], fill_color='lavender', align='left')\n",
-    ")])\n",
-    "display(fig_table)\n",
+    "# # Interactive table view\n",
+    "# fig_table = go.Figure(data=[go.Table(\n",
+    "#     header=dict(values=list(result_df.columns), fill_color='paleturquoise', align='left'),\n",
+    "#     cells=dict(values=[result_df[col] for col in result_df.columns], fill_color='lavender', align='left')\n",
+    "# )])\n",
+    "# display(fig_table)\n",
     "\n",
-    "# Interactive table view\n",
-    "fig_table = go.Figure(data=[go.Table(\n",
-    "    header=dict(values=list(result_df.columns), fill_color='paleturquoise', align='left'),\n",
-    "    cells=dict(values=[result_df[col].map(lambda x: f\"{x:.4f}\" if isinstance(x, float) else x) for col in result_df.columns], fill_color='lavender', align='left')\n",
-    ")])\n",
-    "display(fig_table)\n"
+    "# # Interactive table view\n",
+    "# fig_table = go.Figure(data=[go.Table(\n",
+    "#     header=dict(values=list(result_df.columns), fill_color='paleturquoise', align='left'),\n",
+    "#     cells=dict(values=[result_df[col].map(lambda x: f\"{x:.4f}\" if isinstance(x, float) else x) for col in result_df.columns], fill_color='lavender', align='left')\n",
+    "# )])\n",
+    "# display(fig_table)\n"
    ]
   },
   {
@@ -286,12 +278,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Visualize results { display-mode: \"form\" }\n",
-    "#@markdown Plot the aggregation prone probability scores across the input sequence.\n",
+    "# #@title Visualize results { display-mode: \"form\" }\n",
+    "# #@markdown Plot the aggregation prone probability scores across the input sequence.\n",
+    "# # Default threshold for aggregation propensity\n",
+    "# threshold = 0.3  #@param {type:\"number\", min:0, max:1, step:0.1}\n",
+    "# import plotly.graph_objects as go\n",
+    "# from google.colab import files\n",
+    "\n",
+    "# def plot_probability_profile(uniprot_id: str, threshold: float = threshold):\n",
+    "#     \"\"\"\n",
+    "#     Plot the probability profile per position given an uniprot_id and a threshold.\n",
+    "#     \"\"\"\n",
+    "#     # Filter\n",
+    "#     mask = df['uniprot_id'] == uniprot_id\n",
+    "#     if not mask.any():\n",
+    "#         print(f\"UniProt ID '{uniprot_id}' not found.\")\n",
+    "#         return\n",
+    "#     prob_vector = df.loc[mask, 'prob_vector'].values[0]\n",
+    "#     positions = np.arange(1, len(prob_vector) + 1)\n",
+    "#     residues = list(df.loc[0, \"sequence\"])\n",
+    "\n",
+    "#     # Create figure\n",
+    "#     fig = go.Figure()\n",
+    "\n",
+    "#     # Plot probability profile\n",
+    "#     fig.add_trace(go.Scatter(\n",
+    "#         x= positions,\n",
+    "#         y=prob_vector,\n",
+    "#         mode='lines+markers',\n",
+    "#         name='Probability',\n",
+    "#         hovertemplate='Position %{x}<br>Residue %{text}<br>Aggregation Propensity: %{y:.3f}<extra></extra>',\n",
+    "#         text=residues\n",
+    "\n",
+    "#     ))\n",
+    "#     # Set threshold line\n",
+    "#     fig.add_trace(go.Scatter(\n",
+    "#         x=[positions[0], positions[-1]],\n",
+    "#         y=[threshold, threshold],\n",
+    "#         mode='lines',\n",
+    "#         name=f'Threshold = {threshold}',\n",
+    "#         line=dict(color='red', dash='dash')\n",
+    "#     ))\n",
+    "\n",
+    "#     fig.update_layout(\n",
+    "#         title=f'Aggregation probability profile: {uniprot_id}',\n",
+    "#         xaxis_title='Position',\n",
+    "#         yaxis_title='Aggregation Propensity',\n",
+    "#         hovermode='x unified'\n",
+    "#     )\n",
+    "#     return fig\n",
+    "\n",
+    "# fig = plot_probability_profile(uniprot_id)\n",
+    "# fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "748d93d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combined plot and table display\n",
     "# Default threshold for aggregation propensity\n",
     "threshold = 0.3  #@param {type:\"number\", min:0, max:1, step:0.1}\n",
     "import plotly.graph_objects as go\n",
-    "from google.colab import files\n",
+    "from plotly.subplots import make_subplots\n",
+    "\n",
+    "result_df = pd.DataFrame({\n",
+    "    \"uniprot_id\": [uniprot_id]* len(input_sequence),\n",
+    "    \"position\": list(range(1, len(input_sequence) + 1)),\n",
+    "    \"residue\": list(input_sequence),\n",
+    "    \"aggrescanai_score\": df[\"prob_vector\"].values[0]\n",
+    "})\n",
     "\n",
     "def plot_probability_profile(uniprot_id: str, threshold: float = threshold):\n",
     "    \"\"\"\n",
@@ -308,7 +367,6 @@
     "\n",
     "    # Create figure\n",
     "    fig = go.Figure()\n",
-    "\n",
     "    # Plot probability profile\n",
     "    fig.add_trace(go.Scatter(\n",
     "        x= positions,\n",
@@ -317,7 +375,6 @@
     "        name='Probability',\n",
     "        hovertemplate='Position %{x}<br>Residue %{text}<br>Aggregation Propensity: %{y:.3f}<extra></extra>',\n",
     "        text=residues\n",
-    "\n",
     "    ))\n",
     "    # Set threshold line\n",
     "    fig.add_trace(go.Scatter(\n",
@@ -327,7 +384,6 @@
     "        name=f'Threshold = {threshold}',\n",
     "        line=dict(color='red', dash='dash')\n",
     "    ))\n",
-    "\n",
     "    fig.update_layout(\n",
     "        title=f'Aggregation probability profile: {uniprot_id}',\n",
     "        xaxis_title='Position',\n",
@@ -337,7 +393,28 @@
     "    return fig\n",
     "\n",
     "fig = plot_probability_profile(uniprot_id)\n",
-    "fig.show()"
+    "\n",
+    "\n",
+    "combined_fig = make_subplots(\n",
+    "    rows=1, cols=2,\n",
+    "    shared_yaxes=False,\n",
+    "    horizontal_spacing=0.1,\n",
+    "    column_widths=[0.3, 0.7],\n",
+    "    specs=[[{\"type\": \"table\"}, {\"type\": \"xy\"}]]\n",
+    ")\n",
+    "\n",
+    "# Add APR probability plot\n",
+    "combined_fig.add_trace(fig.data[0], row=1, col=2)\n",
+    "combined_fig.add_trace(fig.data[1], row=1, col=2)\n",
+    "\n",
+    "# Add table\n",
+    "combined_fig.add_trace(go.Table(\n",
+    "    header=dict(values=list(result_df.columns), fill_color='rgba(0,0,0,0)', align='left'),\n",
+    "    cells=dict(values=[result_df[col].map(lambda x: f\"{x:.4f}\" if isinstance(x, float) else x) for col in result_df.columns], fill_color='rgba(0,0,0,0)', align='left')\n",
+    "), row=1, col=1)\n",
+    "\n",
+    "combined_fig.update_layout(height=700, width=1500, title_text=\"Aggregation Probability Profile and Result Table\")\n",
+    "combined_fig.show()"
    ]
   },
   {
@@ -353,42 +430,11 @@
     "import plotly.io as pio\n",
     "fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
     "files.download(f\"aggrescanai_results_{uniprot_id}.html\")\n",
-    "save_results_as_csv(result_df)\n",
+    "#save_results_as_csv(result_df)\n",
     "files.download(f\"aggrescanai_results_{uniprot_id}.csv\")\n",
     "\n",
     "end_time = time.time()\n",
     "print(f\"Total execution time: {(end_time - start_time)/60:.2f} minutes\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ba70f12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Combined plot and table display\n",
-    "# from plotly.subplots import make_subplots\n",
-    "# combined_fig = make_subplots(\n",
-    "#     rows=1, cols=2,\n",
-    "#     shared_yaxes=False,\n",
-    "#     horizontal_spacing=0.1,\n",
-    "#     column_widths=[0.3, 0.6],\n",
-    "#     specs=[[{\"type\": \"table\"}, {\"type\": \"xy\"}]]\n",
-    "# )\n",
-    "\n",
-    "# # Add APR probability plot\n",
-    "# combined_fig.add_trace(fig.data[0], row=1, col=2)\n",
-    "# combined_fig.add_trace(fig.data[1], row=1, col=2)\n",
-    "\n",
-    "# # Add table\n",
-    "# combined_fig.add_trace(go.Table(\n",
-    "#     header=dict(values=list(result_df.columns), fill_color='rgba(0,0,0,0)', align='left'),\n",
-    "#     cells=dict(values=[result_df[col].map(lambda x: f\"{x:.4f}\" if isinstance(x, float) else x) for col in result_df.columns], fill_color='rgba(0,0,0,0)', align='left')\n",
-    "# ), row=1, col=1)\n",
-    "\n",
-    "# combined_fig.update_layout(height=700, width=1500, title_text=\"Aggregation Probability Profile and Result Table\")\n",
-    "# combined_fig.show()"
    ]
   }
  ],
