show table and plot at once - corrected issues

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -29,19 +29,22 @@
    "source": [
     "#@title Input protein data { display-mode: \"form\" }\n",
     "\n",
-    "#@markdown You can also use the example sequence provided below.\n",
-    "# uniprot_id = \"\"  #@param {type:\"string\"}\n",
-    "# input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}\n",
-    "use_example= False  #@param {type:\"boolean\"}\n",
-    "#@markdown Enter an UniProt ID in the box below. You can input isoforms as well! E.g.: P10636-8\n",
-    "uniprot_id = \"\"  #@param {type:\"string\"}\n",
-    "#@markdown Instead you can input a protein sequence directly in the box below. If you leave this empty, the script will attempt to fetch the sequence using the UniProt ID provided above.\n",
+    "#@markdown - Enter an UniProt ID in the box below. You can input isoforms as well! E.g.: P10636-8\n",
+    "uniprot_id = \"P22626-2\"  #@param {type:\"string\"}\n",
+    "#@markdown - Or input a protein sequence directly in the box below. If you leave this empty, the script will attempt to fetch the sequence using the UniProt ID provided above.\n",
     "input_sequence = \"\"  #@param {type:\"string\"}\n",
+    "\n",
+    "#@markdown You can try the example sequence provided below:\n",
+    "use_example= False  #@param {type:\"boolean\"}\n",
+    "\n",
+    "if uniprot_id or input_sequence:\n",
+    "    use_example = False  # If user provides input, don't use example\n",
     "\n",
     "if use_example:\n",
     "    # Example sequence for testing\n",
     "    uniprot_id = \"P37840\"  # Example UniProt ID\n",
     "    input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"\n",
+    "\n",
     "#@markdown ---\n",
     "import time\n",
     "start_time = time.time()"
@@ -426,11 +429,17 @@
    "source": [
     "#@title Download results { display-mode: \"form\" }\n",
     "from google.colab import files\n",
-    "\n",
     "import plotly.io as pio\n",
+    "\n",
+    "def save_results_as_csv(df, filename=f\"aggrescanai_results_{uniprot_id}.csv\"):\n",
+    "    df_rounded = df.copy()\n",
+    "    df_rounded['aggrescanai_score'] = df_rounded['aggrescanai_score'].map(lambda x: f\"{x:.4f}\" if isinstance(x, float) else x)\n",
+    "    df_rounded.to_csv(filename, index=False)\n",
+    "    \n",
+    "    \n",
     "fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
     "files.download(f\"aggrescanai_results_{uniprot_id}.html\")\n",
-    "#save_results_as_csv(result_df)\n",
+    "save_results_as_csv(result_df)\n",
     "files.download(f\"aggrescanai_results_{uniprot_id}.csv\")\n",
     "\n",
     "end_time = time.time()\n",
