show table and plot at once - corrected issues

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -30,7 +30,7 @@
     "#@title Input protein data { display-mode: \"form\" }\n",
     "\n",
     "#@markdown - Enter an UniProt ID in the box below. You can input isoforms as well! E.g.: P10636-8\n",
-    "uniprot_id = \"P22626-2\"  #@param {type:\"string\"}\n",
+    "uniprot_id = \"\"  #@param {type:\"string\"}\n",
     "#@markdown - Or input a protein sequence directly in the box below. If you leave this empty, the script will attempt to fetch the sequence using the UniProt ID provided above.\n",
     "input_sequence = \"\"  #@param {type:\"string\"}\n",
     "\n",
