--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Download models from HuggingFace { display-mode: \"form\" }\n",
+    "#@title Download model from HuggingFace { display-mode: \"form\" }\n",
     "#@markdown This fetches the AggrescanAI models needed for prediction.\n",
     "import os\n",
     "import urllib.request\n",
@@ -104,24 +104,13 @@
     "\n",
     "os.makedirs(\"models\", exist_ok=True)\n",
     "base_url = \"https://huggingface.co/alvaro-2/aggrescanai/resolve/main\"\n",
-    "model_names = [\n",
-    "    f\"balanced_models/balanced_model_1_1_{i}.h5\" for i in range(1, 34)\n",
-    "]\n",
-    "# Download balanced models\n",
-    "print(\"Downloading balanced models...\")\n",
-    "for fname in tqdm(model_names):\n",
-    "    model_url = f\"{base_url}/{fname}\"\n",
-    "    os.makedirs(os.path.dirname(f\"models/balanced_models/\"), exist_ok=True)\n",
-    "    model_path = f\"models/balanced_models/{os.path.basename(fname)}\"\n",
-    "    if not os.path.exists(model_path):\n",
-    "        urllib.request.urlretrieve(model_url, model_path)\n",
     "\n",
     "# Download homology models\n",
     "homology_model_names = [\n",
     "    f\"homology_models/cpad_hotidp90_model_cv_{i}.h5\" for i in range(1, 6)\n",
     "]\n",
-    "\n",
     "print(\"Downloading homology models...\")\n",
+    "\n",
     "for fname in tqdm(homology_model_names):\n",
     "    model_url = f\"{base_url}/{fname}\"\n",
     "    os.makedirs(os.path.dirname(f\"models/homology_models/\"), exist_ok=True)\n",
@@ -149,7 +138,6 @@
     "#@title Load models { display-mode: \"form\" }\n",
     "#@markdown This loads the AggrescanAI models into memory for prediction.\n",
     "from tensorflow.keras.models import load_model\n",
-    "models = [load_model(f\"models/balanced_models/{os.path.basename(fname)}\", compile= False) for fname in model_names]\n",
     "homology_models = [load_model(f\"models/homology_models/{os.path.basename(fname)}\", compile= False) for fname in homology_model_names]"
    ]
   },
@@ -204,27 +192,23 @@
     "    \"\"\"\n",
     "    all_preds = []\n",
     "    for m in models:\n",
-    "        # model.predict devuelve shape (n_samples, 1) o (n_samples,)\n",
     "        p = m.predict(X, batch_size=batch_size)\n",
-    "        p = p.reshape(-1)  # asegurar (n_samples,)\n",
+    "        p = p.reshape(-1)  # Ensure p is a 1D array\n",
     "        all_preds.append(p)\n",
     "    all_preds = np.stack(all_preds, axis=0)   # (n_models, n_samples)\n",
     "    return np.mean(all_preds, axis=0)         # (n_samples,)\n",
     "\n",
-    "# Ensemble function\n",
-    "def ensemble_meta_probs(embedding, weights=(0.1, 0.9)):\n",
+    "def homology_meta_probs(embedding):\n",
     "    \"\"\"\n",
     "    embedding: np.array de forma (L, 1024)\n",
-    "    devuelve: vector de probabilidades de forma (L,)\n",
+    "    returns: probabilities vector of shape (L,)\n",
     "    \"\"\"\n",
-    "    # obtenemos promedios por familia\n",
+    "    # apply soft-voting\n",
     "    p90 = avg_probs(homology_models, embedding)   # (L,)\n",
-    "    p33 = avg_probs(models, embedding)   # (L,)\n",
-    "    # weighted soft-voting\n",
-    "    return weights[0]*p90 + weights[1]*p33 # (L,)\n",
+    "    return p90\n",
     "\n",
     "tqdm.pandas(desc=\"Computing probabilities\")\n",
-    "df[\"prob_vector\"] = df[\"embedding\"].progress_map(ensemble_meta_probs)"
+    "df[\"prob_vector_homology\"] = df[\"embedding\"].progress_map(homology_meta_probs)"
    ]
   },
   {
@@ -243,65 +227,37 @@
    "outputs": [],
    "source": [
     "#@title Visualize results { display-mode: \"form\" }\n",
-    "#@markdown Plot the aggregation prone probability scores across the input sequence.  \n",
-    "\n",
-    "# Combined plot and table display\n",
-    "# Default threshold for aggregation propensity\n",
+    "#@markdown Table and plot of the aggregation prone probability scores across the input sequence.  \n",
     "threshold = 0.3  #@param {type:\"number\", min:0, max:1, step:0.1}\n",
     "#@markdown - Default threshold for aggregation propensity\n",
+    "\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "\n",
+    "# Configurable window size\n",
+    "window_size = 7  #@param {type:\"slider\", min:1, max:25, step:2}\n",
+    "#@markdown - Window size for moving average smoothing of the probability profile - You can adjust this to smooth the profile, just re-run the cell to see the effect.\n",
+    "\n",
+    "# Create smoothed vector\n",
+    "def moving_average(x, w=5):\n",
+    "    return np.convolve(x, np.ones(w)/w, mode='same')\n",
+    "\n",
+    "row = df.iloc[0]\n",
+    "residues = list(row[\"sequence\"])\n",
+    "positions = np.arange(1, len(residues) + 1)\n",
+    "prob_vector = np.array(row[\"prob_vector_homology\"])\n",
+    "smoothed = moving_average(prob_vector, w=window_size)\n",
+    "\n",
+    "\n",
+    "# Prepare result table\n",
     "result_df = pd.DataFrame({\n",
-    "    \"uniprot_id\": [uniprot_id]* len(input_sequence),\n",
-    "    \"position\": list(range(1, len(input_sequence) + 1)),\n",
-    "    \"residue\": list(input_sequence),\n",
-    "    \"aggrescanai_score\": df[\"prob_vector\"].values[0]\n",
+    "    \"uniprot_id\": [row[\"uniprot_id\"]] * len(positions),\n",
+    "    \"position\": positions,\n",
+    "    \"residue\": residues,\n",
+    "    \"aggrescanai_score\": prob_vector\n",
     "})\n",
     "\n",
-    "def plot_probability_profile(uniprot_id: str, threshold: float = threshold):\n",
-    "    \"\"\"\n",
-    "    Plot the probability profile per position given an uniprot_id and a threshold.\n",
-    "    \"\"\"\n",
-    "    # Filter\n",
-    "    mask = df['uniprot_id'] == uniprot_id\n",
-    "    if not mask.any():\n",
-    "        print(f\"UniProt ID '{uniprot_id}' not found.\")\n",
-    "        return\n",
-    "    prob_vector = df.loc[mask, 'prob_vector'].values[0]\n",
-    "    positions = np.arange(1, len(prob_vector) + 1)\n",
-    "    residues = list(df.loc[0, \"sequence\"])\n",
-    "\n",
-    "    # Create figure\n",
-    "    fig = go.Figure()\n",
-    "    # Plot probability profile\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x= positions,\n",
-    "        y=prob_vector,\n",
-    "        mode='lines+markers',\n",
-    "        name='Probability',\n",
-    "        hovertemplate='Position %{x}<br>Residue %{text}<br>Aggregation Propensity: %{y:.3f}<extra></extra>',\n",
-    "        text=residues\n",
-    "    ))\n",
-    "    # Set threshold line\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=[positions[0], positions[-1]],\n",
-    "        y=[threshold, threshold],\n",
-    "        mode='lines',\n",
-    "        name=f'Threshold = {threshold}',\n",
-    "        line=dict(color='red', dash='dash')\n",
-    "    ))\n",
-    "    fig.update_layout(\n",
-    "        title=f'Aggregation probability profile: {uniprot_id}',\n",
-    "        xaxis_title='Position',\n",
-    "        yaxis_title='Aggregation Propensity',\n",
-    "        hovermode='x unified'\n",
-    "    )\n",
-    "    return fig\n",
-    "\n",
-    "fig = plot_probability_profile(uniprot_id)\n",
-    "\n",
-    "\n",
+    "# Create subplot figure: table + plot\n",
     "combined_fig = make_subplots(\n",
     "    rows=1, cols=2,\n",
     "    shared_yaxes=False,\n",
@@ -310,17 +266,55 @@
     "    specs=[[{\"type\": \"table\"}, {\"type\": \"xy\"}]]\n",
     ")\n",
     "\n",
-    "# Add APR probability plot\n",
-    "combined_fig.add_trace(fig.data[0], row=1, col=2)\n",
-    "combined_fig.add_trace(fig.data[1], row=1, col=2)\n",
+    "# Raw gray profile\n",
+    "combined_fig.add_trace(go.Scatter(\n",
+    "    x=positions,\n",
+    "    y=prob_vector,\n",
+    "    fill='tozeroy',\n",
+    "    mode='lines',\n",
+    "    line=dict(color='lightgray'),\n",
+    "    name='Raw Score',\n",
+    "    hoverinfo='skip'\n",
+    "), row=1, col=2)\n",
     "\n",
-    "# Add table\n",
+    "# Smoothed black line\n",
+    "combined_fig.add_trace(go.Scatter(\n",
+    "    x=positions,\n",
+    "    y=smoothed,\n",
+    "    mode='lines+markers',\n",
+    "    name='Smoothed (moving average)',\n",
+    "    line=dict(color='black', width=2),\n",
+    "    marker=dict(color='black', size=4),\n",
+    "    hovertemplate='Position: %{x}<br>Residue: %{text}<br>Smoothed Propensity: %{y:.3f}<extra></extra>',\n",
+    "    text=residues\n",
+    "), row=1, col=2)\n",
+    "\n",
+    "# Threshold line\n",
+    "combined_fig.add_trace(go.Scatter(\n",
+    "    x=[positions[0], positions[-1]],\n",
+    "    y=[0.3, 0.3],\n",
+    "    mode='lines',\n",
+    "    name='Threshold = 0.3',\n",
+    "    line=dict(color='red', dash='dash')\n",
+    "), row=1, col=2)\n",
+    "\n",
+    "# Table on the left\n",
     "combined_fig.add_trace(go.Table(\n",
     "    header=dict(values=list(result_df.columns), fill_color='rgba(0,0,0,0)', align='left'),\n",
     "    cells=dict(values=[result_df[col].map(lambda x: f\"{x:.4f}\" if isinstance(x, float) else x) for col in result_df.columns], fill_color='rgba(0,0,0,0)', align='left')\n",
     "), row=1, col=1)\n",
     "\n",
-    "combined_fig.update_layout(height=700, width=1500, title_text=\"Aggregation Probability Profile and Result Table\")\n",
+    "combined_fig.update_layout(\n",
+    "    title=f\"Aggregation Propensity Profile and Table ({row.uniprot_id})\",\n",
+    "    xaxis_title='Residue Position',\n",
+    "    yaxis_title='Aggregation Propensity',\n",
+    "    hovermode='x unified',\n",
+    "    height=700,\n",
+    "    width=1500,\n",
+    "    template='simple_white',\n",
+    "    legend=dict(x=0.98, y=0.95, xanchor='right', yanchor='top', bgcolor='rgba(255,255,255,0.8)', bordercolor='lightgray', borderwidth=1)\n",
+    ")\n",
+    "\n",
     "combined_fig.show()"
    ]
   },
