--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -242,7 +242,7 @@
     "def moving_average(x, w=5):\n",
     "    return np.convolve(x, np.ones(w)/w, mode='same')\n",
     "\n",
-    "row = df.iloc[0]\n",
+    "row = df[df[\"uniprot_id\"] == uniprot_id].iloc[0]\n",
     "residues = list(row[\"sequence\"])\n",
     "positions = np.arange(1, len(residues) + 1)\n",
     "prob_vector = np.array(row[\"prob_vector_homology\"])\n",
