--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -321,13 +321,113 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fcb6a08f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Visualize results { display-mode: \"form\" }\n",
+    "#@markdown Visual comparison of raw prediction scores (shaded gray) and smoothed profile (black), with results table on the left and download options.\n",
+    "\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "\n",
+    "# Configurable window size\n",
+    "window_size = 7  #@param {type:\"slider\", min:1, max:25, step:2}\n",
+    "#@markdown - Window size for moving average smoothing of the probability profile - You can adjust this to smooth the profile, just re-run the cell to see the effect.\n",
+    "\n",
+    "# Create smoothed vector\n",
+    "def moving_average(x, w=5):\n",
+    "    return np.convolve(x, np.ones(w)/w, mode='same')\n",
+    "\n",
+    "# Select correct row based on uniprot_id\n",
+    "row = df[df[\"uniprot_id\"] == uniprot_id].iloc[0]\n",
+    "residues = list(row[\"sequence\"])\n",
+    "positions = np.arange(1, len(residues) + 1)\n",
+    "prob_vector = np.array(row[\"prob_vector_homology\"])\n",
+    "smoothed = moving_average(prob_vector, w=window_size)\n",
+    "\n",
+    "# Prepare result table\n",
+    "result_df = pd.DataFrame({\n",
+    "    \"uniprot_id\": [row[\"uniprot_id\"]] * len(positions),\n",
+    "    \"position\": positions,\n",
+    "    \"residue\": residues,\n",
+    "    \"aggrescanai_score\": prob_vector\n",
+    "})\n",
+    "\n",
+    "# Create standalone plot figure (no table)\n",
+    "fig_only = go.Figure()\n",
+    "fig_only.add_trace(go.Scatter(\n",
+    "    x=positions,\n",
+    "    y=prob_vector,\n",
+    "    fill='tozeroy',\n",
+    "    mode='lines',\n",
+    "    line=dict(color='lightgray'),\n",
+    "    name='Raw Score',\n",
+    "    hoverinfo='skip'\n",
+    "))\n",
+    "fig_only.add_trace(go.Scatter(\n",
+    "    x=positions,\n",
+    "    y=smoothed,\n",
+    "    mode='lines+markers',\n",
+    "    name='Smoothed (Moving Average)',\n",
+    "    line=dict(color='black', width=2),\n",
+    "    marker=dict(color='black', size=4),\n",
+    "    text=residues,\n",
+    "    hovertemplate='Position: %{x}<br>Residue: %{text}<br>Smoothed Propensity: %{y:.3f}<extra></extra>'\n",
+    "))\n",
+    "fig_only.add_trace(go.Scatter(\n",
+    "    x=[positions[0], positions[-1]],\n",
+    "    y=[0.3, 0.3],\n",
+    "    mode='lines',\n",
+    "    name='Threshold = 0.3',\n",
+    "    line=dict(color='red', dash='dash')\n",
+    "))\n",
+    "fig_only.update_layout(\n",
+    "    title=f\"Aggregation Propensity Profile ({row.uniprot_id})\",\n",
+    "    xaxis_title='Residue Position',\n",
+    "    yaxis_title='Aggregation Propensity',\n",
+    "    hovermode='x unified',\n",
+    "    height=500,\n",
+    "    width=1000,\n",
+    "    template='simple_white',\n",
+    "    legend=dict(x=0.98, y=0.95, xanchor='right', yanchor='top', bgcolor='rgba(255,255,255,0.8)', bordercolor='lightgray', borderwidth=1)\n",
+    ")\n",
+    "\n",
+    "# Show full combined figure with table (optional, not exported)\n",
+    "combined_fig = make_subplots(\n",
+    "    rows=1, cols=2,\n",
+    "    shared_yaxes=False,\n",
+    "    horizontal_spacing=0.1,\n",
+    "    column_widths=[0.3, 0.7],\n",
+    "    specs=[[{\"type\": \"table\"}, {\"type\": \"xy\"}]]\n",
+    ")\n",
+    "combined_fig.add_trace(fig_only.data[0], row=1, col=2)\n",
+    "combined_fig.add_trace(fig_only.data[1], row=1, col=2)\n",
+    "combined_fig.add_trace(fig_only.data[2], row=1, col=2)\n",
+    "combined_fig.add_trace(go.Table(\n",
+    "    header=dict(values=list(result_df.columns), fill_color='rgba(0,0,0,0)', align='left'),\n",
+    "    cells=dict(values=[result_df[col].map(lambda x: f\"{x:.4f}\" if isinstance(x, float) else x) for col in result_df.columns], fill_color='rgba(0,0,0,0)', align='left')\n",
+    "), row=1, col=1)\n",
+    "combined_fig.update_layout(\n",
+    "    title=f\"Aggregation Propensity Profile and Table ({row.uniprot_id})\",\n",
+    "    hovermode='x unified',\n",
+    "    height=700,\n",
+    "    width=1500,\n",
+    "    template='simple_white',\n",
+    "    legend=dict(x=0.98, y=0.95, xanchor='right', yanchor='top', bgcolor='rgba(255,255,255,0.8)', bordercolor='lightgray', borderwidth=1)\n",
+    ")\n",
+    "combined_fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1cf614e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "#@title Download results { display-mode: \"form\" }\n",
     "from google.colab import files\n",
-    "import plotly.io as pio\n",
     "\n",
     "def save_results_as_csv(df, filename=f\"aggrescanai_results_{uniprot_id}.csv\"):\n",
     "    df_rounded = df.copy()\n",
@@ -335,7 +435,7 @@
     "    df_rounded.to_csv(filename, index=False)\n",
     "    \n",
     "    \n",
-    "fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
+    "fig_only.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
     "files.download(f\"aggrescanai_results_{uniprot_id}.html\")\n",
     "save_results_as_csv(result_df)\n",
     "files.download(f\"aggrescanai_results_{uniprot_id}.csv\")\n",
