--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# AggrescanAI  \n",
     "User-friendy notebook to calculate aggregation propensities using protein language models and deep neural networks.\n",
-    "- Input: an uniprot id or a protein sequence.\n",
-    "- Output: aggregation propensity profile.  \n",
-    "- How? Just hit `Runtime` -> `Run all` or press ctrl+F9"
+    "- **Input**: an UniProt ID or a protein sequence.\n",
+    "- **Output**: aggregation propensity profile table and figure.  \n",
+    "- **How?** Just go to `Runtime` → `Run all` or press `ctrl+F9`"
    ]
   },
   {
@@ -234,7 +234,7 @@
     "\n",
     "# Configurable window size\n",
     "window_size = 7  #@param {type:\"slider\", min:1, max:25, step:2}\n",
-    "#@markdown - Window size for moving average smoothing of the probability profile - You can adjust this to smooth the profile, just re-run the cell to see the effect.\n",
+    "#@markdown - Window size for moving average smoothing of the probability profile – Adjust this value to control the level of smoothing. Re-run the cell to apply and visualize the changes.\n",
     "\n",
     "# Create smoothed vector\n",
     "def moving_average(x, w=5):\n",
@@ -328,6 +328,7 @@
    "outputs": [],
    "source": [
     "#@title Download results { display-mode: \"form\" }\n",
+    "#@markdown - Download the results as a CSV file and an HTML file for visualization.\n",
     "from google.colab import files\n",
     "\n",
     "def save_results_as_csv(df, filename=f\"aggrescanai_results_{uniprot_id}.csv\"):\n",
