Fasta input incorporation

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -58,6 +58,7 @@
    "outputs": [],
    "source": [
     "#@title Upload FASTA file (optional)\n",
+    "#@markdown - Execute this cell if you want to upload a FASTA file with protein sequences.\n",
     "from google.colab import files\n",
     "from Bio import SeqIO\n",
     "import pandas as pd\n",
